Fixed cover z-indexing bug

--- a/resources/scss/modular/_block-cover.scss
+++ b/resources/scss/modular/_block-cover.scss
@@ -10,10 +10,10 @@ category:
 ```html
 <div class="block" data-block-type="cover">
 
-	<h1 class="block__heading">Open contracting is making public  spending count for everyone</h1>
-
 	<div class="block__image" style="background-image: url('https://open-contracting.test/wp-content/uploads/2019/10/IMG_4716.jpg');"></div>
 	<div class="block__image-overlay" style="background-color: rgba(0,0,0,0.3);"></div>
+
+	<h1 class="block__heading">Open contracting is making public  spending count for everyone</h1>
 
 </div>
 ```
@@ -31,7 +31,6 @@ category:
 	.block__image {
 		grid-column: wide;
 		grid-row: all;
-		z-index: 1;
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: 50% 50%;
@@ -40,7 +39,6 @@ category:
 	.block__image-overlay {
 		grid-column: wide;
 		grid-row: all;
-		z-index: 2;
 	}
 
 	.block__heading {
@@ -49,7 +47,6 @@ category:
 		grid-row: 2;
 		color: currentColor;
 		margin-bottom: 0;
-		z-index: 3;
 		align-self: center;
 		@include fluid-type(font-size, 360px, 1240px, 25px, 39px);
 
